Unify assistant semantics and mobile execution flow